[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orbi-monitor-core"
version = "0.1.1"
description = "Core Orbi RBR750/RBS750 AJAX and SOAP data collector"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "crabtrading" }
]
keywords = ["netgear", "orbi", "rbr750", "rbs750", "soap", "monitoring"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Networking :: Monitoring",
]

[project.scripts]
orbi-monitor-core = "orbi_monitor_core.cli:main"

[tool.setuptools.packages.find]
include = ["orbi_monitor_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
