[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orbi-monitor-core"
version = "0.2.0"
description = "Core Orbi AJAX/SOAP collector with optional native device traffic telemetry"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "crabtrading" }
]
keywords = ["netgear", "orbi", "rbr750", "rbs750", "soap", "monitoring", "ebpf", "libbpf"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
  "speedtest-cli==2.1.3",
]

[project.scripts]
orbi-monitor-core = "orbi_monitor_core.cli:main"
orbi-monitor-device-traffic = "orbi_monitor_core.device_traffic:main"
orbi-monitor-failover = "orbi_monitor_core.failover:main"

[tool.setuptools.packages.find]
include = ["orbi_monitor_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
